[package]
name = "cooptex"
version = "0.1.1"
edition = "2018"
authors = ["Shelby Doolittle <shelby@shelbyd.com>"]
description = "Deadlock free Mutexes"
documentation = "https://docs.rs/cooptex"
readme = "README.md"
repository = "https://github.com/shelbyd/cooptex"
license = "MIT"
keywords = ["mutex", "deadlock", "concurrency"]

[dependencies]
loom = { git = "https://github.com/shelbyd/loom", optional = true }

[dev-dependencies]
crossbeam = "0.8.1"
rand = "0.8.4"

[badges]
maintenance = { status = "experimental" }
