[package]
name = "cooptex"
version = "0.1.3"
edition = "2018"
authors = ["Shelby Doolittle <shelby@shelbyd.com>"]
description = "Deadlock free Mutexes"
documentation = "https://docs.rs/cooptex"
readme = "README.md"
repository = "https://github.com/shelbyd/cooptex"
license = "MIT"
keywords = ["mutex", "deadlock", "concurrency"]

[dependencies]
frunk = "0.4.0"

[dev-dependencies]
loom = "0.5.2"
crossbeam = "0.8.1"
rand = "0.8.4"

[features]
loom-tests = []

[badges]
maintenance = { status = "experimental" }
